GRAD2-1687 - 1996 graduation algorithm matching applied skills / fine arts incorrectly